rename Goshen Farms

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ferme Coopérative - Gestion Avicole",
+  "name": "Goshen Farms - Gestion centralisée",
   "short_name": "FermeApp",
   "description": "PWA de gestion de ferme avicole et provenderie",
   "theme_color": "#16A34A",
